--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -276,7 +276,9 @@
 
   /* Auth Form */
   .auth-form {
-    @apply flex min-h-screen w-full max-w-[420px] flex-col justify-center gap-5 py-10 md:gap-8;
+    @apply flex min-h-screen w-full max-w-[420px] flex-col justify-center gap-10 py-3 md:gap-10;
+    @apply md:items-center md:mx-auto w-full;
+    @apply sm:pl-4 sm:items-start;
   }
 
   .form-item {
